Project_VX.Y/files/manifests/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-svc
  namespace: todos-namespace
spec:
  type: ClusterIP
  selector:
    app: todos-app
  ports:
    - name: frontend
      protocol: TCP
      port: 2345  # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 3000 # This is the target ports
    - name: backend
      protocol: TCP
      port: 3456  # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 5005 # This is the target ports
