Project_VX.Y/files/manifests/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todos-backend
  namespace: todos-namespace
spec:
  rules:
  - http:
      paths:
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todos-svc
            port:
              number: 3456

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-frontend
  namespace: todos-namespace
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todos-svc
            port:
              number: 2345
